<resources>
    <string name="app_name">CustomLazada</string>
    <string name="localhost">http://192.168.1.227:8000/lazada/loaisanpham.php</string>
    <string name="slogan1">Thế giới mua sắm trong tầm tay bạn</string>
    <string name="slogan2">Giao hàng tận nơi + Thanh toán dễ dàng</string>
    <string name="slogan3">100% bảo vệ người tiêu dùng</string>
    <string name="slogan4">Cam kết</string>
    <string name="btn_txt_search">Tìm kiếm trên Lazada</string>
    <string name="mn_title_search">Search</string>
    <string name="mn_title_cart">Giỏ hàng</string>
    <string name="txt_des_camera">Camera</string>
    <string name="mn_title_more">Menu</string>
    <string name="openDescRes">openDrawerContentDescRes</string>
    <string name="closeDescRes">closeDrawerContentDescRes</string>
    <string name="btn_txt_fb">Facebook</string>
    <string name="btn_txt_gg">Google+</string>
    <string name="txt_login_others">Hoặc đăng nhập bằng</string>
    <string name="btn_txt_login">Đăng nhập</string>
    <string name="mn_title_login">Đăng nhập</string>
    <string name="mn_title_notify">Thông báo</string>
    <string name="mn_title_wishList">Danh sách mong muốn</string>
    <string name="mn_title_myCart">Đơn hàng của tôi</string>
    <string name="mn_title_settings">Cài đặt</string>
    <string name="mn_title_policy">Chính sách</string>
    <string name="mn_title_help">Trợ giúp</string>
    <string name="et_hint_password">Mật khẩu</string>
    <string name="et_hint_account">Địa chỉ email</string>
    <string name="txt_forget_password">Quên mật khẩu?</string>

    <string name="facebook_app_id">1858252967726380</string>
    <string name="google_plus_client_id">217079519547-ebsg0s07qnlkh8k474goq2e1c3l0l6nn.apps.googleusercontent.com</string>

    <string name="mn_title_logout">Đăng xuất</string>
    <string name="signUp_tv_note">Cần điền tất cả các mục.</string>
    <string name="signUp_et_hint_name">Họ tên đầy đủ</string>
    <string name="signUp_et_hint_email">Địa chỉ email</string>
    <string name="signUp_et_hint_password">Mật khẩu</string>
    <string name="signUp_tv_warn">Mật khẩu phải bao gồm ít nhất 6 ký tự và một chữ số.</string>
    <string name="signUp_et_hint_repass">Nhập lại mật khẩu</string>
    <string name="signUp_sc_txt_offer">Tôi muốn nhận các khuyến mãi độc quyền qua email.</string>
    <string name="signUp_btn_txt_signup">Đăng Ký</string>
    <string name="signUp_tv_policy">Chúng tôi đã hiểu rõ các điều khoản và chính sách bảo mật của Lazada.</string>
    <string name="signUp_tv_other">Hoặc đăng ký bằng</string>
    <string name="signUp_btn_fb">Facebook</string>
    <string name="signUp_btn_gg">Google</string>
    <string name="dientu_txt_title_topthl">Top Những Thương Hiệu Lớn</string>
    <string name="dientu_txt_title_hangmoive">Hàng Mới Về</string>
    <string name="htsptdm_btn_title_sapxep">Sắp xếp</string>
    <string name="htsptdm_btn_title_loc">Lọc</string>
    <string name="dientu_tv_topsp">Top 150 SKU Bán Chạy Trong Tháng</string>
    <string name="dientu_tv_topSPGiaRe">Top Smartphone Chất Lượng Giá Rẻ</string>
    <string name="dientu_tv_cameraHanhDong">Camera Hành Động Polaroid</string>
    <string name="dientu_tv_tiviDacBiet">Tivi Đặc Biệt Cho Các Tỉnh Thành Lớn</string>
    <string name="chitietsanpham_tv_nguoiban">Bán và đóng gói bởi</string>
    <string name="chitietsanpham_tv_slogan1">Trả hàng miễn phí</string>
    <string name="chitietsanpham_tv_slogan2">Đảm bảo chính hãng 100%</string>
    <string name="chitietsanpham_btn_slogan1">Bảo vệ người mua hàng 100%</string>
    <string name="chitietsanpham_btn_slogan2">Đảm bảo sự hài lòng</string>
    <string name="chitietsanpham_tv_title_chitietsp">Chi tiết sản phẩm</string>
    <string name="chitietsanpham_tv_danhgia">Đánh giá và nhận xét</string>
    <string name="chitietsanpham_btn_all_comments">Xem tất cả các nhận xét</string>
    <string name="chitietsanpham_tv_bansethich">Bạn sẽ thích</string>
    <string name="chitietsanpham_btn_muangay">Mua ngay</string>
    <string name="chitietsanpham_btn_title_xemthem">Các sản phẩm khác của Flash</string>
    <string name="chitietsanpham_tv_title_thongsokythuat">Thông số kỹ thuật</string>
    <string name="chitietsanpham_btn_title_danhgia">Viết đánh giá</string>
    <string name="danhgia_tv_title_nhanxet">Nhận xét về sản phẩm này</string>
    <string name="danhgia_et_hint_tieude">Tiêu đề</string>
    <string name="danhgia_et_hint_noidung">Nội dung</string>
    <string name="danhgia_btn_dongy">Đồng ý</string>
    <string name="cart_btn_buy_now">Mua ngay</string>
</resources>
