<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_seach"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/mn_title_search"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/ic_shopping_cart_white_24dp"
        android:title="@string/mn_title_cart"
        app:actionLayout="@layout/custom_item_cart"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/mn_title_more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_login"
                android:icon="@drawable/ic_sentiment_satisfied_black_24dp"
                android:title="@string/mn_title_login" />
            <item
                android:id="@+id/menu_notify"
                android:icon="@drawable/ic_notifications_none_black_24dp"
                android:title="@string/mn_title_notify" />
            <item
                android:id="@+id/menu_wishList"
                android:icon="@drawable/ic_favorite_border_black_24dp"
                android:title="@string/mn_title_wishList" />
            <item
                android:id="@+id/menu_myCart"
                android:icon="@drawable/ic_content_paste_black_24dp"
                android:title="@string/mn_title_myCart" />
            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/mn_title_settings" />
            <item
                android:id="@+id/menu_policy"
                android:icon="@drawable/ic_event_note_black_24dp"
                android:title="@string/mn_title_policy" />
            <item
                android:id="@+id/menu_help"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/mn_title_help" />
            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/logout"
                android:title="@string/mn_title_logout"
                android:visible="false" />
        </menu>
    </item>
</menu>