<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/signUp_tv_note"
            android:textColor="@color/black" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/signUp_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signUp_et_hint_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/signUp_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signUp_et_hint_email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signUp_inputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/gray">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signUp_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signUp_et_hint_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/signUp_tv_warn"
            android:textSize="12sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signUp_inputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/gray">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signUp_et_retype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signUp_et_hint_repass"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/signUp_sc_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:padding="5dp"
            android:text="@string/signUp_sc_txt_offer"
            android:textSize="12sp" />

        <Button
            android:id="@+id/signUp_btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/bgLogo"
            android:text="@string/signUp_btn_txt_signup"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/signUp_tv_policy"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/signUp_tv_other"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signUp_btn_withFB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/btn_facebook"
                android:drawableStart="@drawable/facebook_small"
                android:text="@string/btn_txt_fb"
                android:textColor="@color/facebook" />

            <Button
                android:id="@+id/signUp_btn_withGG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_google_plus"
                android:drawableStart="@drawable/google_plus_small"
                android:text="@string/btn_txt_gg"
                android:textColor="@color/goooglePlus" />
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

