<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.namtran.lazada.customview.ClearEditText
                android:id="@+id/login_etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_hint_account"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/gray">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_hint_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/login_tvForgetPW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:text="@string/txt_forget_password"
            android:textColor="@color/forgetPW" />

        <Button
            android:id="@+id/login_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/bgLogo"
            android:text="@string/btn_txt_login"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/txt_login_others"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_withFB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_btn_facebook"
                android:drawableStart="@drawable/facebook_small"
                android:text="@string/btn_txt_fb"
                android:textColor="@color/facebook" />

            <Button
                android:id="@+id/login_withGG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_btn_google_plus"
                android:drawableStart="@drawable/google_plus_small"
                android:text="@string/btn_txt_gg"
                android:textColor="@color/goooglePlus" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
